--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
+    "motion": "^12.23.24",
     "next": "16.0.5",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
